<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCB4A8"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textColor="#FF6D3F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/fillNums"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        android:backgroundTint="#BD97B1"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint="@string/enter_numbers_here"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/suma"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:background="@color/orange"
        android:text="+"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <Button
        android:id="@+id/vidnimanya"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@color/orange"
        android:text="-"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/suma"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <Button
        android:id="@+id/mnozhennya"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="88dp"
        android:background="@color/orange"
        android:text="*"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <Button
        android:id="@+id/dilennya"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:background="@color/orange"
        android:text="/"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/mnozhennya"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="152dp"
        android:background="@color/orange"
        android:text="@string/clean"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <Button
        android:id="@+id/end"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="152dp"
        android:background="@color/orange"
        android:text="@string/result"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fillNums" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="76dp"
        android:text="@string/maid_in"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>